# aiteRadar

./: .gitignore  CROSS_REPO_ANALYSIS.md  LABEL_TAXONOMY.md  README.md  REVIEW_FINDINGS.md  pyproject.toml  repos.yaml
.github/workflows/: weekly-aiteradar.yml  weekly-inferadar.yml
changelogs/: aiteradar_2026-05-01_to_2026-05-15.json  aiteradar_2026-05-11_to_2026-05-18.json  aiteradar_2026-05-15T07-04-34Z.json
changelogs/2026-05-04_to_2026-05-18/: AITER.json  ATOM.json  vllm.json
changelogs/2026-05-13_to_2026-05-20/: AITER.json  ATOM.json  vllm.json
rules/: rules-aiter.yaml  rules-atom.yaml  rules-sglang.yaml  rules-vllm.yaml
src/aiteradar/: artifact.py  classifier.py  cli.py  github_client.py  rules.yaml
src/inferadar/: __init__.py  artifact.py  classifier.py  cli.py  github_client.py
tests/: test_artifact.py  test_classifier.py  test_cli.py  test_github_client.py
tests/fixtures/: sample_prs.json
