[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiteradar"
version = "0.1.0"
description = "Deterministic weekly changelog classifier for ROCm/AITER"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
aiteradar = "aiteradar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aiteradar = ["rules.yaml"]
