[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inferadar"
version = "0.1.0"
description = "Deterministic weekly changelog classifier for LLM inference engine repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
inferadar = "inferadar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
